[CHG]support msprofbin ascend-protobuf-static
Match-id-a029d4fd8ebcc96fede290b5eb4f11debd098a2f

--- a/cmake/superbuild/CMakeLists.txt
+++ b/cmake/superbuild/CMakeLists.txt
@@ -11,6 +11,7 @@ if (CMAKE_INSTALL_PREFIX STREQUAL /usr/local)
 endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/external/ascend_protobuf_shared.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/external/ascend_protobuf_static.cmake)
 include(${CMAKE_CURRENT_LIST_DIR}/external/protoc.cmake)
 
 ExternalProject_Add(msprof
@@ -19,13 +20,5 @@ ExternalProject_Add(msprof
                 -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
                 <SOURCE_DIR>
     BUILD_COMMAND $(MAKE)
-    DEPENDS protoc_build ascend_protobuf_shared_build
+    DEPENDS protoc_build ascend_protobuf_shared_build ascend_protobuf_static_build
 )
-
-
-
-
-
-
-
-
