--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -1,4 +1,4 @@
-# add_subdirectory(msprofbin)
+add_subdirectory(msprofbin)
 
 protobuf_generate(profiler_proto
     CppPath
@@ -237,7 +237,7 @@ target_link_libraries(msprofiler_fwk_share PRIVATE
     -Wl,--no-as-needed
     c_sec
     alog
-    ascend_protobuf
+    ascend_protobuf_shared
     profapi
     error_manager
     -Wl,--as-needed
