[Bugfix]alog Symbol table error
Match-id-932d57b043a8d219260e145b7387b7f381893406

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -214,6 +214,7 @@ set_target_properties(msprofiler_fwk_share
 
 target_compile_definitions(msprofiler_fwk_share PRIVATE
     google=ascend_private
+    LOG_CPP
 )
 
 target_compile_options(msprofiler_fwk_share PRIVATE
