[SCH]compile app success
Match-id-50853d51f95d94df3634290b35d3c308aeae0586

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -227,6 +227,7 @@ target_compile_options(msprofiler_fwk_share PRIVATE
     -fvisibility-inlines-hidden
     -Wfloat-equal
     -Wextra
+    -D_GLIBCXX_USE_CXX11_ABI=0
 )
 
 target_link_options(msprofiler_fwk_share PRIVATE
