[SCH]Compile ut/application
Match-id-3e316a1df24a64645ccb037a0475332bae16014d

--- a/llt/msprof_cpp/CMakeLists.txt
+++ b/llt/msprof_cpp/CMakeLists.txt
@@ -1,4 +1,21 @@
-set(MSPROF_SOURCE_DIR ${TOP_DIR}/abl/msprof/collector)
+cmake_minimum_required(VERSION 3.14.1)
+project(msprof_llt)
+
+set(CMAKE_SKIP_RPATH TRUE)
+set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../..)
+set(MSPROF_SOURCE_DIR ${TOP_DIR}/collector)
+set(CMAKE_MODULE_PATH
+    ${TOP_DIR}/cmake/modules
+    ${TOP_DIR}/llt/cmake/modules
+)
+
+find_package(protoc)
+find_package(ascend_protobuf_shared)
+find_package(ascend_protobuf_static)
+find_package(gtest)
+find_package(mockcpp)
+
+include(${TOP_DIR}/llt/cmake/depend.cmake)
 
 protobuf_generate(profiler
     CppPath
@@ -6,5 +23,6 @@ protobuf_generate(profiler
     ${MSPROF_SOURCE_DIR}/dvvp/proto/profiler.proto
     ${MSPROF_SOURCE_DIR}/dvvp/proto/profiler_ext.proto
 )
+
 add_subdirectory(ut)
-add_subdirectory(st)
+# add_subdirectory(st)
