--- a/llt/CMakeLists.txt
+++ b/llt/CMakeLists.txt
@@ -1,2 +1,26 @@
+cmake_minimum_required(VERSION 3.14)
+project(msprof_llt_superbuild)
 
-add_subdirectory(msprof_cpp)
+include(ExternalProject)
+
+set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
+
+if (CMAKE_INSTALL_PREFIX STREQUAL /usr/local)
+    set(CMAKE_INSTALL_PREFIX ${TOP_DIR}/llt/output CACHE STRING "path for install()" FORCE)
+    message(STATUS "No install prefix selected, default to ${CMAKE_INSTALL_PREFIX}.")
+endif()
+
+include(${TOP_DIR}/cmake/superbuild/external/ascend_protobuf_shared.cmake)
+include(${TOP_DIR}/cmake/superbuild/external/ascend_protobuf_static.cmake)
+include(${TOP_DIR}/cmake/superbuild/external/protoc.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/opensource/googletest.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/opensource/mockcpp.cmake)
+
+ExternalProject_Add(msprof_llt
+    SOURCE_DIR ${TOP_DIR}/llt/msprof_cpp
+    CONFIGURE_COMMAND ${CMAKE_COMMAND}
+                -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
+                <SOURCE_DIR>
+    BUILD_COMMAND $(MAKE)
+    DEPENDS protoc_build ascend_protobuf_shared_build ascend_protobuf_static_build gtest_build mockcpp_build
+)
