--- a/llt/msprof_cpp/ut/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(app)
-# add_subdirectory(common)
+# add_subdirectory(app)
+add_subdirectory(common)
 # add_subdirectory(device)
 # add_subdirectory(driver)
 # add_subdirectory(job_wrapper)
