[ADD]ut_app\ut_common\ut_device compile and run.
Match-id-b64e1091cd630a30c30ba20eff79fd04c8e25959

--- a/llt/msprof_cpp/ut/common/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/common/CMakeLists.txt
@@ -18,6 +18,7 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
     ${CppPath}
 )
 
