[ADD]ut_driver\ut_job_wrapper\ut_message compile and run.
Match-id-33678e6abfd8bb81f6600203ad6597dd428c4c0b

--- a/llt/msprof_cpp/ut/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/CMakeLists.txt
@@ -1,10 +1,10 @@
 # add_subdirectory(app)
 # add_subdirectory(common)
-add_subdirectory(device)
+# add_subdirectory(device)
 # add_subdirectory(driver)
 # add_subdirectory(job_wrapper)
 # add_subdirectory(message)
-# add_subdirectory(msprof)
+add_subdirectory(msprof)
 # add_subdirectory(transport)
 # add_subdirectory(streamio)
 # add_subdirectory(msprofbin)
