--- a/llt/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -6,7 +6,6 @@ protobuf_generate(profiler
 )
 
 ################ msprofiler_utest ################
-
 set(profilerSrcList
 	${MSPROF_SOURCE_DIR}/dvvp/adx/stub/adx_prof_api.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/adx/wrapper/memory_utils.cpp
@@ -70,6 +69,9 @@ set(profilerSrcList
 	${MSPROF_SOURCE_DIR}/dvvp/transport/uploader.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/transport/uploader_mgr.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/transport/hash_data.cpp
+	${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
 	${CppPath}
 )
 
@@ -99,10 +101,23 @@ target_include_directories(msprofiler_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/common/utils 
     ${TOP_DIR}/abl/msprof/inc/toolchain
 	../stub/
-	${TOP_DIR}/llt/abl/msprof/msprof_cpp/st/stub 
-	${TOP_DIR}/abl/libc_sec/include
-	${TOP_DIR}/open_source/json/include
-    ${TOP_DIR}/metadef/inc
+	${GTEST_INCLUDE_DIR}
+    ${MOCKCPP_INCLUDE_DIR}
+    ${TOP_DIR}/opensource/securec/include
+    ${TOP_DIR}/opensource/json/include
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc
+    ${MSPROF_SOURCE_DIR}/../inc
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/graphengine/external
+	${MSPROF_SOURCE_DIR}/../inc/toolchain
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/acl
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/profapi
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/inc
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/engine/include
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/common/include
@@ -151,6 +166,7 @@ target_compile_options(msprofiler_utest PRIVATE
     -fno-access-control
     -Wfloat-equal
     -Wextra
+	-D_GLIBCXX_USE_CXX11_ABI=0
 )
 
 target_compile_definitions(msprofiler_utest PRIVATE
@@ -160,13 +176,13 @@ target_compile_definitions(msprofiler_utest PRIVATE
 )
 
 target_link_libraries(msprofiler_utest PRIVATE
-    $<BUILD_INTERFACE:intf_llt_pub>
-    $<BUILD_INTERFACE:mmpa_headers>
-    $<BUILD_INTERFACE:slog_headers>
-    $<BUILD_INTERFACE:adump_headers>
-    $<BUILD_INTERFACE:msprof_headers>
-    ascend_protobuf
-    c_sec
+	ascend_protobuf_static
+	c_sec
+	pthread
+	${GTEST_STATIC_LIBRARY}
+	${MOCKCPP_STATIC_LIBRARY}
+	dl
+	profapi
 )
 
 set_target_properties(msprofiler_utest
@@ -181,7 +197,6 @@ run_llt_test(
 )
 
 # msprof utest
-
 add_executable(msprof_utest
 	test/main.cpp
 	test/msprof_utest.cpp
@@ -215,16 +230,27 @@ add_executable(msprof_utest
     ${MSPROF_SOURCE_DIR}/dvvp/transport/transport.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/transport/uploader.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/transport/uploader_mgr.cpp
+	${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
 	${CppPath}
 )
 
 target_include_directories(msprof_utest PRIVATE
-	${TOP_DIR}/abl/libc_sec/include
-	${TOP_DIR}/inc/driver
-	${TOP_DIR}/open_source/json/include
-	${TOP_DIR}/ace/npuruntime/inc
-	${TOP_DIR}/ace/npuruntime/acl/inc/external/acl
-    ${TOP_DIR}/metadef/inc
+	${GTEST_INCLUDE_DIR}
+	${MOCKCPP_INCLUDE_DIR}
+	${TOP_DIR}/opensource/securec/include
+	${TOP_DIR}/opensource/json/include
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc
+	${MSPROF_SOURCE_DIR}/../inc
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/graphengine/external
+	${MSPROF_SOURCE_DIR}/../inc/toolchain
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/drvprof
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/drvprof/include
@@ -238,6 +264,7 @@ target_include_directories(msprof_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/common/queue
 	${MSPROF_SOURCE_DIR}/dvvp/common/singleton
 	${MSPROF_SOURCE_DIR}/dvvp/common/utils
+	${MSPROF_SOURCE_DIR}/dvvp/common/config
 	${MSPROF_SOURCE_DIR}/dvvp/message
 	${MSPROF_SOURCE_DIR}/dvvp/transport
 	${MSPROF_SOURCE_DIR}/dvvp/adx/inc
@@ -258,6 +285,7 @@ target_compile_options(msprof_utest PRIVATE
     -fno-access-control
     -Wfloat-equal
     -Wextra
+	-D_GLIBCXX_USE_CXX11_ABI=0
 )
 
 target_compile_definitions(msprof_utest PRIVATE
@@ -268,13 +296,12 @@ target_compile_definitions(msprof_utest PRIVATE
 )
 
 target_link_libraries(msprof_utest PRIVATE
-    $<BUILD_INTERFACE:intf_llt_pub>
-    $<BUILD_INTERFACE:mmpa_headers>
-    $<BUILD_INTERFACE:msprof_headers>
-    $<BUILD_INTERFACE:slog_headers>
-    $<BUILD_INTERFACE:adump_headers>
-    ascend_protobuf
-    c_sec
+	ascend_protobuf_static
+	c_sec
+	pthread
+	${GTEST_STATIC_LIBRARY}
+	${MOCKCPP_STATIC_LIBRARY}
+	dl
 )
 
 set_target_properties(msprof_utest
