--- a/llt/msprof_cpp/ut/message/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/message/CMakeLists.txt
@@ -9,6 +9,8 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}//dvvp/message/dispatcher.cpp 
     ${MSPROF_SOURCE_DIR}//dvvp/common/utils/utils.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
     ${CppPath}
 )
 
@@ -27,17 +29,23 @@ add_executable(message_utest
 )
 
 target_include_directories(message_utest PRIVATE
-    ${TOP_DIR}/abl/libc_sec/include 
-    ${TOP_DIR}/inc/driver 
-    ${TOP_DIR}/abl/adump 
-    ${TOP_DIR}/open_source/json/include 
-    ${TOP_DIR}/ace/npuruntime/inc  
-    ${TOP_DIR}/abl/msprof/inc
-    ${TOP_DIR}/metadef/inc
-    ${MSPROF_SOURCE_DIR}/dvvp 
-    ${MSPROF_SOURCE_DIR}/dvvp/common 
-    ${MSPROF_SOURCE_DIR}/dvvp/common/logger 
-    ${CMAKE_BINARY_DIR}/proto/profiler/
+    ${GTEST_INCLUDE_DIR}
+    ${MOCKCPP_INCLUDE_DIR}
+    ${TOP_DIR}/opensource/securec/include
+    ${TOP_DIR}/opensource/json/include
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc
+    ${MSPROF_SOURCE_DIR}/../inc
+    ${MSPROF_SOURCE_DIR}/dvvp
+    ${MSPROF_SOURCE_DIR}/dvvp/common
+    ${MSPROF_SOURCE_DIR}/dvvp/common/logger
+    ${MSPROF_SOURCE_DIR}/dvvp/common/config
+    ${CMAKE_BINARY_DIR}/proto/profiler
     ${MSPROF_SOURCE_DIR}/dvvp/depend/include/stub
 )
 
@@ -49,7 +57,7 @@ target_compile_options(message_utest PRIVATE
     -fno-access-control
     -Wfloat-equal
     -Wextra
-
+    -D_GLIBCXX_USE_CXX11_ABI=0
 )
 
 target_compile_definitions(message_utest PRIVATE
@@ -59,11 +67,12 @@ target_compile_definitions(message_utest PRIVATE
 )
 
 target_link_libraries(message_utest PRIVATE
-    $<BUILD_INTERFACE:intf_llt_pub>
-    $<BUILD_INTERFACE:mmpa_headers>
-    $<BUILD_INTERFACE:slog_headers>
-    ascend_protobuf
+    ascend_protobuf_static
     c_sec
+    pthread
+    ${GTEST_STATIC_LIBRARY}
+    ${MOCKCPP_STATIC_LIBRARY}
+    dl
 )
 
 set_target_properties(message_utest
