[SCH]ST run. FAILED need to fix.
Match-id-dbb40e8d5e36eb96b9084e93bcab36c9d4715c63

--- a/llt/msprof_cpp/st/device/CMakeLists.txt
+++ b/llt/msprof_cpp/st/device/CMakeLists.txt
@@ -40,6 +40,9 @@ set(profilerSrcList
 	${MSPROF_SOURCE_DIR}/dvvp/transport/transport.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/transport/uploader.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/transport/uploader_mgr.cpp
+	${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
     ${CppPath}
 )
 
@@ -62,15 +65,18 @@ add_executable(
 )
 
 target_include_directories(device_stest PRIVATE
-	${TOP_DIR}/abl/libc_sec/include
-	${TOP_DIR}/inc/driver
-	${TOP_DIR}/inc/tsch
-	${TOP_DIR}/abl/adump
-	${TOP_DIR}/abl/adump/external
-	${TOP_DIR}/open_source/json/include
-	${TOP_DIR}/ace/npuruntime/inc
-	${TOP_DIR}/abl/msprof/inc
-	${TOP_DIR}/metadef/inc
+	${GTEST_INCLUDE_DIR}
+	${MOCKCPP_INCLUDE_DIR}
+	${TOP_DIR}/opensource/securec/include
+	${TOP_DIR}/opensource/json/include
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+	${MSPROF_SOURCE_DIR}/dvvp/depend/inc
+	${MSPROF_SOURCE_DIR}/../inc
 	${MSPROF_SOURCE_DIR}/dvvp
 	${MSPROF_SOURCE_DIR}/dvvp/adx/inc
 	${MSPROF_SOURCE_DIR}/dvvp/common
@@ -78,6 +84,7 @@ target_include_directories(device_stest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/common/platform
 	${MSPROF_SOURCE_DIR}/dvvp/common/statistics
 	${MSPROF_SOURCE_DIR}/dvvp/common/validation
+	${MSPROF_SOURCE_DIR}/dvvp/common/config
 	${MSPROF_SOURCE_DIR}/dvvp/device/include
 	${MSPROF_SOURCE_DIR}/dvvp/job_wrapper/include
 	${MSPROF_SOURCE_DIR}/dvvp/transport
@@ -99,6 +106,7 @@ target_compile_options(device_stest PRIVATE
     -fno-access-control
     -Wfloat-equal
     -Wextra
+	-D_GLIBCXX_USE_CXX11_ABI=0
 )
 
 target_compile_definitions(device_stest PRIVATE
@@ -113,12 +121,12 @@ target_link_options(device_stest PRIVATE
 )
 
 target_link_libraries(device_stest PRIVATE
-    $<BUILD_INTERFACE:intf_llt_pub>
-    $<BUILD_INTERFACE:mmpa_headers>
-    $<BUILD_INTERFACE:slog_headers>
-    $<BUILD_INTERFACE:adump_headers>
-    ascend_protobuf
-    c_sec
+	ascend_protobuf_static
+	c_sec
+	pthread
+	${GTEST_STATIC_LIBRARY}
+	${MOCKCPP_STATIC_LIBRARY}
+	dl
 )
 
 set_target_properties(device_stest
