--- a/llt/msprof_cpp/st/CMakeLists.txt
+++ b/llt/msprof_cpp/st/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_subdirectory(device)
-add_subdirectory(msprof)
-add_subdirectory(job_wrapper)
-add_subdirectory(msprofbin)
-add_subdirectory(streamio)
+# add_subdirectory(common) # ok
+# add_subdirectory(device) # dumped core
+# add_subdirectory(driver) # ok
+# add_subdirectory(job_wrapper) # ok
+# add_subdirectory(msprof) # dumped core
+# add_subdirectory(msprofbin) # ok
+# add_subdirectory(streamio) # command dumped core
 add_subdirectory(stub_stest)
-add_subdirectory(common)
-add_subdirectory(driver)
