[SCH]ut/st PASS except msprofbin.
Match-id-9c2bd928c35a8b1486554936b7f8bdb9de207c2b

--- a/llt/msprof_cpp/ut/device/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/device/CMakeLists.txt
@@ -41,9 +41,6 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/transport/transport.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/transport/uploader.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/transport/uploader_mgr.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
     ${CppPath}
 
 )
@@ -55,6 +52,8 @@ set(localSrcFiles
     ../stub/common-utils-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/profile_drv_user_stub.cpp
+    ../../stub/driver_plugin_stub.cpp
+    ../../stub/mmpa_plugin_stub.cpp
     test/prof_msg_handler_utest.cpp
     test/receiver_utest.cpp
     test/collection_engine_utest.cpp
