--- a/llt/msprof_cpp/ut/job_wrapper/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/job_wrapper/CMakeLists.txt
@@ -65,9 +65,6 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/transport/transport.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/transport/uploader.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/transport/uploader_mgr.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/prof_api_stub.cpp
     ${CppPath}
 )
@@ -80,7 +77,8 @@ set(localSrcFiles
     ../stub/common-utils-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/profile_drv_user_stub.cpp
-    ../../stub/error_manager_stub.cpp
+    ../../stub/driver_plugin_stub.cpp
+    ../../stub/mmpa_plugin_stub.cpp
     test/prof_job_utest.cpp
     test/prof_peripheral_job_utest.cpp
     test/prof_timer_utest.cpp
