--- a/llt/msprof_cpp/st/driver/CMakeLists.txt
+++ b/llt/msprof_cpp/st/driver/CMakeLists.txt
@@ -3,9 +3,6 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/driver/channel/ai_drv_prof_api.cpp 
     ${MSPROF_SOURCE_DIR}/dvvp/common/utils/utils.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
 )
 
 set(localSrcFiles
@@ -14,6 +11,8 @@ set(localSrcFiles
     ../stub/devdrv_runtime_api_stub.cpp 
     ../stub/profile_drv_user_stub.cpp 
     ../stub/common-utils-stub.cpp 
+    ../../stub/driver_plugin_stub.cpp
+    ../../stub/mmpa_plugin_stub.cpp
     testcase/ai_drv_dev_api_stest.cpp 
 )
 
