--- a/llt/msprof_cpp/ut/common/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/common/CMakeLists.txt
@@ -16,9 +16,6 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}//dvvp/driver/channel/ai_drv_prof_api.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/message/codec.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
     ${CppPath}
 )
 
@@ -27,6 +24,8 @@ set(localSrcFiles
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/profile_drv_user_stub.cpp
     ../stub/hdc-log-stub.cpp
+    ../../stub/driver_plugin_stub.cpp
+    ../../stub/mmpa_plugin_stub.cpp
     test/main.cpp
     test/config_manager_utest.cpp
     test/chunk_pool_test.cpp
