--- a/llt/msprof_cpp/ut/stub_utest/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/stub_utest/CMakeLists.txt
@@ -2,9 +2,6 @@
 add_executable(stub_file_utest
     ${MSPROF_SOURCE_DIR}/dvvp/adx/wrapper/hdc_api.cpp  
     ${MSPROF_SOURCE_DIR}/dvvp/adx/wrapper/memory_utils.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/mmpa_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/driver_plugin.cpp
-    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_manager.cpp
     test/main.cpp
     test/hdc_api_utest.cpp
     ..//stub/mmpa_stub.cpp
@@ -12,6 +9,8 @@ add_executable(stub_file_utest
     ../stub/hdc-log-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/ide_hdc_stub.cc
+    ../../stub/driver_plugin_stub.cpp
+    ../../stub/mmpa_plugin_stub.cpp
 
 )
 
