[SCH]UT ST Pass all.
Match-id-0b6fac2109c8d60f67f2764a02531a19880b1bb7

--- a/llt/msprof_cpp/CMakeLists.txt
+++ b/llt/msprof_cpp/CMakeLists.txt
@@ -24,5 +24,5 @@ protobuf_generate(profiler
     ${MSPROF_SOURCE_DIR}/dvvp/proto/profiler_ext.proto
 )
 
-# add_subdirectory(ut)
-add_subdirectory(st)
+add_subdirectory(ut)
+# add_subdirectory(st)
