--- a/llt/msprof_cpp/st/CMakeLists.txt
+++ b/llt/msprof_cpp/st/CMakeLists.txt
@@ -3,6 +3,6 @@
 # add_subdirectory(driver) # done
 # add_subdirectory(job_wrapper) # done
 # add_subdirectory(msprof) # done
-# add_subdirectory(msprofbin) # 遗留（同ut）
+add_subdirectory(msprofbin) # 遗留（同ut）
 # add_subdirectory(streamio) # done
-add_subdirectory(stub_stest)
+# add_subdirectory(stub_stest) # done
