[ADD]Complete Prj.
Match-id-f3b6ceedc6b001ff9afea038f5b71766dd763b45

--- a/llt/msprof_cpp/st/CMakeLists.txt
+++ b/llt/msprof_cpp/st/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_subdirectory(common) # done
-add_subdirectory(device) # done
-add_subdirectory(driver) # done
-add_subdirectory(job_wrapper) # done
-add_subdirectory(msprof) # done
-add_subdirectory(msprofbin) # done
-add_subdirectory(streamio) # done
-add_subdirectory(stub_stest) # done
+# add_subdirectory(common) # done
+# add_subdirectory(device) # done
+# add_subdirectory(driver) # done
+add_subdirectory(job_wrapper) # 2 JOB_WRAPPER_PROF_CTRLCPU_JOB_TEST.Uninit JOB_WRAPPER_PROF_LLC_JOB_TEST.Init
+# add_subdirectory(msprof) # done
+# add_subdirectory(msprofbin) # done
+# add_subdirectory(streamio) # done
+# add_subdirectory(stub_stest) # done
