--- a/llt/msprof_cpp/ut/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/CMakeLists.txt
@@ -1,5 +1,5 @@
 # add_subdirectory(app) # done
-add_subdirectory(common) # done
+# add_subdirectory(common) # done
 # add_subdirectory(device) # done
 # add_subdirectory(driver) # done
 # add_subdirectory(job_wrapper) # done
@@ -7,5 +7,5 @@ add_subdirectory(common) # done
 # add_subdirectory(msprof) # core dump
 # add_subdirectory(transport) # done
 # add_subdirectory(streamio) # done
-# add_subdirectory(msprofbin) # done
+add_subdirectory(msprofbin) # done
 # add_subdirectory(stub_utest) # done
