--- a/llt/msprof_cpp/ut/streamio/client/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/streamio/client/CMakeLists.txt
@@ -27,6 +27,7 @@ set(localSrcFiles
     ../../stub/common-utils-stub.cpp
     ../../stub/hdc-log-stub.cpp
     ../../stub/hdc-api-stub.cpp
+    ../../../stub/driver_plugin_stub.cpp
 )
 
 add_executable(client_utest 
