--- a/llt/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -84,6 +84,7 @@ set(profilerSrcFile
 	../stub/devdrv_runtime_api_stub.cpp
 	../stub/profile_drv_user_stub.cpp
 	../stub/hdc-api-stub.cpp
+	../../stub/driver_plugin_stub.cpp
     ${profilerSrcList}
 )
 
