[SCH]UT ST All PASS.
Match-id-8f9613aa01f9d605d7b884caab756c486b2931d4

--- a/llt/msprof_cpp/st/stub_stest/CMakeLists.txt
+++ b/llt/msprof_cpp/st/stub_stest/CMakeLists.txt
@@ -4,12 +4,12 @@ add_executable(stub_file_stest
     ${MSPROF_SOURCE_DIR}/dvvp/adx/wrapper/memory_utils.cpp
     test/main.cpp
     test/hdc_api_stest.cpp
+    ../stub/mmpa_stub.cpp
     ../stub/profile_drv_user_stub.cpp
     ../stub/hdc-log-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/ide_hdc_stub.cc
     ../../stub/driver_plugin_stub.cpp
-    ../../stub/mmpa_plugin_stub.cpp
 )
 
 target_include_directories(stub_file_stest PRIVATE
