--- a/llt/msprof_cpp/ut/stub_utest/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/stub_utest/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(stub_file_utest
     ../stub/hdc-log-stub.cpp
     ../stub/devdrv_runtime_api_stub.cpp
     ../stub/ide_hdc_stub.cc
-
+    ../../stub/driver_plugin_stub.cpp
 )
 
 target_include_directories(stub_file_utest PRIVATE
